Add permission check.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,8 @@ author: CyRien
 description: Reward your players for each our hour they spend playing.
 
 main: us.cyrien.hr.HourlyReward
+
+permission:
+    hourlyreward.reload:
+        description: Reload HourlyReward's configuration.
+        default: op
